backend/deploy/application/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-simple-bank-service
spec:
  selector:
    app: simple-bank-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
