backend/deploy/application/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-bank-api-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: higress
  rules:
    - host: "api.lookeke.com"
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-simple-bank-service
                port:
                  number: 80
  tls:
    - hosts:
        - api.lookeke.com
      secretName: simple-bank-api-sect
